entrar pagina sii

--- a/app/src/main/res/layout/fragment__optiones.xml
+++ b/app/src/main/res/layout/fragment__optiones.xml
@@ -105,7 +105,7 @@
                     app:cardElevation="6dp">
 
                     <LinearLayout
-
+                        android:id="@+id/Opcion_SII"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
@@ -121,7 +121,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
-                            android:text="Talleres"
+                            android:text="SII"
                             android:textColor="@color/black"
                             android:textSize="18dp" />
 
@@ -204,6 +204,7 @@
                     app:cardElevation="6dp">
 
                     <LinearLayout
+                        android:id="@+id/Opcion_PlanEstudios"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
@@ -285,7 +286,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
                             android:gravity="center"
-                            android:text="SII"
+                            android:text="Talleres"
                             android:textColor="@color/black"
                             android:textSize="18dp" />
 
