--- a/app/src/main/res/layout/activity_login_admi.xml
+++ b/app/src/main/res/layout/activity_login_admi.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/rectagulo"
-    >
+    android:background="@drawable/rectagulo">
 
     <ImageView
         android:id="@+id/imageView3"
