--- a/app/src/main/res/layout/activity_plan_estudios.xml
+++ b/app/src/main/res/layout/activity_plan_estudios.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.90">
+        app:layout_constraintVertical_bias="0.50">
 
         <Space
             android:layout_width="match_parent"
@@ -58,10 +58,12 @@
             android:textColor="@color/cafe"/>
 
         <Spinner
-            android:layout_width="match_parent"
+            android:id="@+id/lista_carreras"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="150dp"
-            />
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal" />
 
     </FrameLayout>
 
