--- a/app/src/main/res/layout/activity_crear_publi.xml
+++ b/app/src/main/res/layout/activity_crear_publi.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity_crearPubli">
 
     <ScrollView
@@ -13,182 +14,186 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card"
-                style="@style/CardView"
+
+            <LinearLayout
+                android:id="@+id/principal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp">
+                android:dividerPadding="16dp"
+                android:orientation="vertical"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp">
 
                 <LinearLayout
-                    android:id="@+id/principal"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:dividerPadding="16dp"
-                    android:orientation="vertical"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="5dp">
+                    android:background="@color/amarillo"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/amarillo"
-                        android:orientation="horizontal">
-
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="155dp"
-                            android:layout_height="80dp"
-                            android:layout_weight="1"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.120000005"
-                            app:shapeAppearanceOverlay="@style/Redondo"
-                            app:srcCompat="@drawable/logo" />
-
-                        <Space
-                            android:layout_width="15dp"
-                            android:layout_height="match_parent" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-
-                            <Space
-                                android:layout_width="match_parent"
-                                android:layout_height="15dp" />
-
-                            <TextView
-                                android:id="@+id/ViewUserName"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="10dp"
-                                android:layout_weight="1"
-                                android:text="Instituto Tecnologico de Ocotlan"
-                                android:textSize="24sp"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
-                    </LinearLayout>
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="155dp"
+                        android:layout_height="80dp"
+                        android:layout_weight="1"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.120000005"
+                        app:shapeAppearanceOverlay="@style/Redondo"
+                        app:srcCompat="@drawable/logo" />
 
                     <Space
-                        android:layout_width="match_parent"
-                        android:layout_height="15dp" />
-
-                    <Spinner
-                        android:id="@+id/lista"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:textColor="#3F5185"
-                        android:textSize="30sp" />
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/numContainer"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:layout_marginTop="16dp"
-                        android:hint="¿Qué estas pensando?"
-                        app:errorEnabled="true">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/editTextTexto"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textMultiLine"
-                            android:singleLine="false"
-                            android:textColor="#000000"
-                            tools:text=""></com.google.android.material.textfield.TextInputEditText>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                    <Space
-                        android:layout_width="match_parent"
-                        android:layout_height="15dp" />
+                        android:layout_width="15dp"
+                        android:layout_height="match_parent" />
 
                     <LinearLayout
-                        android:id="@+id/buttons_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/buttonSelectImage"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            android:backgroundTint="@color/ama"
-                            android:elevation="2dp"
-                            android:onClick="onClick"
-                            android:text="Agregar imagen"
-                            android:textAlignment="center"
-                            android:textColor="@color/cafe"
-                            android:textSize="13sp"
-                            android:textStyle="italic" />
-
-                        <Button
-                            android:id="@+id/publicar"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            android:backgroundTint="@color/ama"
-                            android:elevation="2dp"
-                            android:onClick="publicar"
-                            android:text="Publicar"
-                            android:textAlignment="center"
-                            android:textColor="@color/cafe"
-                            android:textSize="13sp"
-                            android:textStyle="italic" />
-
-                        <Button
-                            android:id="@+id/cancel_button"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            android:backgroundTint="@color/ama"
-                            android:elevation="2dp"
-                            android:text="Cancelar"
-                            android:textAlignment="center"
-                            android:textColor="@color/cafe"
-                            android:textSize="13sp"
-                            android:textStyle="italic" />
-
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/text_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:visibility="gone" />
-
-                    <ImageView
-                        android:id="@+id/imagenPubli"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerInside" />
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="15dp" />
+
+                        <TextView
+                            android:id="@+id/ViewUserName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
+                            android:layout_weight="1"
+                            android:text="Instituto Tecnologico de Ocotlan"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
+
+                <Spinner
+                    android:id="@+id/lista"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:textColor="#3F5185"
+                    android:textSize="30sp" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/numContainer"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginTop="16dp"
+                    android:hint="¿Qué estas pensando?"
+                    app:errorEnabled="true">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextTexto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textMultiLine"
+                        android:singleLine="false"
+                        android:textColor="#000000"
+                        tools:text=""></com.google.android.material.textfield.TextInputEditText>
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
+
+                <LinearLayout
+                    android:id="@+id/buttons_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/buttonSelectImage"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/ama"
+                        android:elevation="2dp"
+                        android:onClick="onClick"
+                        android:text="Agregar imagen"
+                        android:textAlignment="center"
+                        android:textColor="@color/cafe"
+                        android:textSize="13sp"
+                        android:textStyle="italic" />
+
+                    <Button
+                        android:id="@+id/publicar"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/ama"
+                        android:elevation="2dp"
+                        android:onClick="publicar"
+                        android:text="Publicar"
+                        android:textAlignment="center"
+                        android:textColor="@color/cafe"
+                        android:textSize="13sp"
+                        android:textStyle="italic" />
+
+                    <ProgressBar
+                        android:id="@+id/progressBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:visibility="gone"/>
+
+                    <Button
+                        android:id="@+id/cancel_button"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/ama"
+                        android:elevation="2dp"
+                        android:onClick="cancelar"
+                        android:text="Cancelar"
+                        android:textAlignment="center"
+                        android:textColor="@color/cafe"
+                        android:textSize="13sp"
+                        android:textStyle="italic" />
 
 
                 </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
+
+            </LinearLayout>
+
+            <GridLayout
+                android:id="@+id/layoutImagenes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alignmentMode="alignMargins"
+                android:columnOrderPreserved="false"
+                android:columnCount="2"
+                android:padding="8dp">
+            </GridLayout>
+
+
 
         </LinearLayout>
 
