hice taller cultural y programe el boton editar del administrador de las pantallas, plan de estudio y todos los talleres

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -81,7 +81,7 @@
                 android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Opciones"
+                android:text="Herramientas"
                 android:textStyle="bold"
                 android:textColor="@color/menu"
                 android:layout_marginStart="10dp"
