--- a/app/src/main/res/layout/activity_plan_estudios.xml
+++ b/app/src/main/res/layout/activity_plan_estudios.xml
@@ -63,6 +63,17 @@
             android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal" />
 
+            <!-- Botón flotante -->
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/boton_editar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@drawable/ave_sombreado"
+                app:backgroundTint="@color/white"
+                app:elevation="6dp"
+                app:fabSize="normal" />
     </FrameLayout>
 
     <com.google.android.material.imageview.ShapeableImageView
