--- a/app/src/main/res/layout/activity_taller_civico.xml
+++ b/app/src/main/res/layout/activity_taller_civico.xml
@@ -252,6 +252,24 @@
                 android:textSize="10sp"
                 android:textStyle="bold|italic" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
         </LinearLayout>
+
     </ScrollView>
+    <!-- Botón flotante -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/boton_editar2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ave_sombreado"
+        app:backgroundTint="@color/white"
+        app:elevation="10dp"
+        app:fabSize="normal" />
+
 </RelativeLayout>
