--- a/app/src/main/res/drawable/round_home_100.xml
+++ b/app/src/main/res/drawable/round_home_100.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/home_20"/>
+    <solid android:color="@color/ama"/>
     <corners android:radius="100dp"/>
 
 </shape>
