--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,25 +19,27 @@
         app:elevation="6dp"
         app:fabSize="normal" />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="@color/white">
 
         <ImageView
-            android:id="@+id/filter_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/casa"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" />
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logo2" />
 
-    </RelativeLayout>
+        <!-- TextView para mostrar el texto -->
+        <TextView
+            android:id="@+id/text_view"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="8dp"
+            android:textColor="@color/cafe"
+            android:text="   Instituto Tecnológico de Ocotlán"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
+    </LinearLayout>
 </FrameLayout>
