Nos trajimos de la BD las imagenes y datos de la cardview

--- a/app/src/main/res/layout/activity_menu_talleres.xml
+++ b/app/src/main/res/layout/activity_menu_talleres.xml
@@ -278,6 +278,7 @@
         android:src="@drawable/ave_sombreado"
         app:backgroundTint="@color/white"
         app:elevation="10dp"
+        android:visibility="gone"
         app:fabSize="normal" />
 
 </RelativeLayout>
