--- a/app/src/main/res/layout/pantalla_editar_civicos.xml
+++ b/app/src/main/res/layout/pantalla_editar_civicos.xml
@@ -77,6 +77,51 @@
     <EditText
         android:id="@+id/editInicio"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        />
+
+    <Button
+        android:id="@+id/mostrarCambiar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableEnd="@android:drawable/arrow_down_float"
+        android:text="Cambiar Imagen"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="@color/white"
+        android:elevation="2dp"
+        android:onClick="Verificar"
+        android:textColor="@color/cafe"
+        android:textSize="20dp"
+        android:textStyle="italic"/>
+
+    <!-- Contenedor para el contenido adicional -->
+    <LinearLayout
+        android:id="@+id/contentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
+        <!-- Imagen a mostrar -->
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@color/material_on_primary_emphasis_high_type"
+            android:src="@drawable/taller1_pic1" />
+
+        <!-- Botón para cambiar la imagen -->
+        <Button
+            android:id="@+id/btnChangeImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:elevation="2dp"
+            android:textColor="@color/cafe"
+            android:textSize="20dp"
+            android:textStyle="italic"
+            android:text="Cambiar" />
+    </LinearLayout>
 
 </LinearLayout>
