--- a/app/src/main/res/layout/activity_taller_civico.xml
+++ b/app/src/main/res/layout/activity_taller_civico.xml
@@ -101,9 +101,9 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/imagen_civico"
                         android:layout_width="145dp"
                         android:layout_height="match_parent"
-                        android:paddingLeft="10dp"
                         android:scaleType="centerCrop"
                         app:srcCompat="@drawable/taller1_pic1" />
 
