--- a/app/src/main/res/layout/activity_taller_cultural.xml
+++ b/app/src/main/res/layout/activity_taller_cultural.xml
@@ -49,7 +49,7 @@
             android:outlineAmbientShadowColor="@color/cafe" />
 
         <TextView
-            android:id="@+id/Text2"
+            android:id="@+id/TextInicioFecha"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="20dp"
@@ -101,6 +101,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/image_danza"
                     android:layout_width="145dp"
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
@@ -133,9 +134,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/instructor2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Edgar Rojo\n392 131 0706"
+                        android:text="Edgar Rojo"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -143,15 +145,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Estatus:"
+                        android:text="Teléfono:"
                         android:textColor="#000000"
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textTel2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Servicio Social"
+                        android:text="392 131 0706"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -165,6 +168,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textHorario2"
                         android:layout_width="111dp"
                         android:layout_height="wrap_content"
                         android:text="Lunes y Viernes\n| 14:00 - 16:00 |"
@@ -181,6 +185,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textLugar2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Explanada Techada"
@@ -206,6 +211,7 @@
 
 
                 <ImageView
+                    android:id="@+id/image_musica"
                     android:layout_width="145dp"
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
@@ -221,7 +227,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Grupo de Música Versátil"
+                        android:text="Música Versátil"
                         android:textAlignment="viewStart"
                         android:textAppearance="?attr/textAppearanceHeadline6"
                         android:textColor="#000000"
@@ -238,9 +244,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/instructor3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Pedro Ramsés Moreno Juárez - 392 109 8761"
+                        android:text="Pedro Ramsés Moreno Juárez"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -248,15 +255,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Estatus:"
+                        android:text="Teléfono:"
                         android:textColor="#000000"
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textTel3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Servicio Social"
+                        android:text="392 109 8761"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -270,6 +278,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textHora3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Lun, Mar | 13:00 - 15:00 |\nMiércoles | 14:00 - 16:00 |"
@@ -284,13 +293,15 @@
                         android:textColor="#000000"
                         android:textSize="14dp"
                         android:textStyle="bold" />
-
                     <TextView
+                        android:id="@+id/textLugar3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Salón de Música"
+                        android:layout_marginTop="8dp"
+                        android:text="Lugar"
                         android:textColor="#000000"
                         android:textSize="14dp" />
+
                 </LinearLayout>
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -311,6 +322,7 @@
 
 
                 <ImageView
+                    android:id="@+id/image_dibujo"
                     android:layout_width="145dp"
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
@@ -343,9 +355,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/instructor4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Angela Urcino Ibarra\n331 395 4676"
+                        android:text="Angela Urcino Ibarra"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -353,15 +366,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Estatus:"
+                        android:text="Teléfono:"
                         android:textColor="#000000"
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textTel4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Servicio Social"
+                        android:text="331 395 4676"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -375,6 +389,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textHora4"
                         android:layout_width="111dp"
                         android:layout_height="wrap_content"
                         android:text="Martes y Viernes\n| 13:00 - 16:00 |"
@@ -391,6 +406,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textLugar4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Biblioteca"
@@ -415,6 +431,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/image_ajedrez"
                     android:layout_width="145dp"
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
@@ -447,9 +464,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/instructor5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Emiliano Navarro Valadez\n392 110 0731"
+                        android:text="Emiliano Navarro Valadez"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -457,15 +475,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Estatus:"
+                        android:text="Teléfono:"
                         android:textColor="#000000"
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textTel5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Servicio Social"
+                        android:text="392 110 0731"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -479,6 +498,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textHora5"
                         android:layout_width="111dp"
                         android:layout_height="wrap_content"
                         android:text="Lunes y Martes\n| 14:00 - 15:00 |"
@@ -495,6 +515,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textLugar5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Biblioteca"
@@ -520,6 +541,7 @@
 
 
                 <ImageView
+                    android:id="@+id/image_video"
                     android:layout_width="145dp"
                     android:layout_height="match_parent"
                     android:paddingLeft="10dp"
@@ -552,9 +574,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/instructor6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Julián Gonzalez Cruz\n392 165 9255"
+                        android:text="Julián Gonzalez Cruz"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -562,15 +585,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Estatus:"
+                        android:text="Teléfono:"
                         android:textColor="#000000"
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textTel6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Servicio Social"
+                        android:text="392 165 9255"
                         android:textColor="#000000"
                         android:textSize="14dp" />
 
@@ -584,6 +608,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textHora6"
                         android:layout_width="111dp"
                         android:layout_height="wrap_content"
                         android:text="Lunes y Jueves\n| 14:00 - 16:00 |"
@@ -600,6 +625,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/textLugar6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Sala de Cómputo"
@@ -621,6 +647,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/textInicio2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -666,6 +693,13 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="30dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Salón de Música"
+            android:textColor="#000000"
+            android:textSize="14dp" />
     </LinearLayout>
     </ScrollView>
 
