--- a/app/src/main/res/layout/cardview_publicaciones.xml
+++ b/app/src/main/res/layout/cardview_publicaciones.xml
@@ -49,8 +49,7 @@
             android:layout_height="55dp"
             android:layout_marginBottom="8dp"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:maxLines="2"/>
+            android:textSize="18sp" />
 
     </LinearLayout>
 
