--- a/app/src/main/res/layout/activity_taller_civico.xml
+++ b/app/src/main/res/layout/activity_taller_civico.xml
@@ -86,115 +86,10 @@
                 android:textSize="40dp"
                 android:textStyle="bold" />
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card0"
-                style="@style/Widget.Material3.CardView.Elevated"
-                android:layout_width="match_parent"
-                android:layout_height="295dp"
-                android:layout_margin="30dp"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imagen_civico"
-                        android:layout_width="145dp"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        app:srcCompat="@drawable/taller1_pic1" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <TextView
-                            android:layout_width="130dp"
-                            android:layout_height="wrap_content"
-                            android:text="Banda de Guerra y Escolta"
-                            android:textAlignment="viewStart"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
-                            android:textColor="#070D7A"
-                            android:textSize="17dp"
-                            android:textStyle="bold|italic" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="Instructor:"
-                            android:textColor="#000000"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/instructor"
-                            android:text="Gustavo Valdovinos Solis "
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="#000000"
-                            android:textSize="14dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="Teléfono:"
-                            android:textColor="#000000"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/textTel"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="392 112 6769"
-                            android:textColor="#000000"
-                            android:textSize="14dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="Horario:"
-                            android:textColor="#000000"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/textHorario"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Lunes, Martes y Jueves     | 19:00 - 22:00 |"
-                            android:textColor="#000000"
-                            android:textSize="14dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="Lugar:"
-                            android:textColor="#000000"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/textLugar"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Cancha de Básquetbol"
-                            android:textColor="#000000"
-                            android:textSize="14dp" />
-
-                    </LinearLayout>
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycle_taller_civico"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
 
             <TextView
                 android:layout_width="wrap_content"
