--- a/app/src/main/res/layout/cardview_publicaciones.xml
+++ b/app/src/main/res/layout/cardview_publicaciones.xml
@@ -14,12 +14,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/logo2" />
 
             <!-- TextView para mostrar el texto -->
@@ -33,23 +33,29 @@
                 android:textColor="@color/cafe"
                 android:text="   Instituto Tecnológico de Ocotlán"
                 android:textStyle="bold"
-                android:textSize="18sp"/>
+                android:textSize="16dp"/>
         </LinearLayout>
 
         <!-- RecyclerView para mostrar las imágenes -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/image_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="294dp" />
-
+            android:layout_height="300dp"
+            />
 
         <TextView
             android:id="@+id/text_view2"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
+        <TextView
+            android:id="@+id/fecha"
+            android:layout_width="match_parent"
+            android:layout_height="20dp">
+        </TextView>
 
     </LinearLayout>
 
