--- a/app/src/main/res/layout/pantalla_editar_civicos.xml
+++ b/app/src/main/res/layout/pantalla_editar_civicos.xml
@@ -9,6 +9,22 @@
 
     <TextView
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
+        android:text="Nombre del Taller: "
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="18dp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/editTitulo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Instructor:"
@@ -64,28 +80,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
-        android:text="Inicio de talleres: "
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/editInicio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
 
     <Button
         android:id="@+id/mostrarCambiar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableEnd="@android:drawable/arrow_down_float"
-        android:text="Cambiar Imagen"
+        android:text="Cargar Imagen"
         android:layout_gravity="center_horizontal"
         android:backgroundTint="@color/white"
         android:elevation="2dp"
