--- a/app/src/main/res/layout/activity_plan_estudios.xml
+++ b/app/src/main/res/layout/activity_plan_estudios.xml
@@ -59,9 +59,18 @@
             android:id="@+id/lista_carreras"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="120dp"
             android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal" />
+
+        <ImageView
+            android:id="@+id/reticula_image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp">
+        </ImageView>
 
             <!-- Botón flotante -->
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -74,6 +83,15 @@
                 app:backgroundTint="@color/white"
                 app:elevation="6dp"
                 app:fabSize="normal" />
+
+        <Spinner
+            android:id="@+id/materias_carrera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="375dp"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"/>
     </FrameLayout>
 
     <com.google.android.material.imageview.ShapeableImageView
