--- a/app/src/main/res/layout/fragment__optiones.xml
+++ b/app/src/main/res/layout/fragment__optiones.xml
@@ -80,10 +80,10 @@
 
                         <ImageView
                             android:layout_width="80dp"
-                            android:layout_height="80dp" />
+                            android:layout_height="80dp"
+                            />
 
                         <TextView
-
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
@@ -305,6 +305,7 @@
                     app:cardElevation="6dp">
 
                     <LinearLayout
+                        android:id="@+id/Opcion_Personal"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
@@ -320,7 +321,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
-                            android:text="Docentes"
+                            android:text=" Personal\nAcadémico"
                             android:textColor="@color/black"
                             android:textSize="18dp" />
 
